--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,6 +1,7 @@
-$font-color: rgb(100, 100, 100);
+$font-color: rgba(100, 100, 100, 1);
+$white-color: rgba(243, 243, 244, 1);
 $back-color: rgba(233, 233, 233, 1);
-$grey-color: rgb(117, 117, 117);
+$grey-color: rgba(117, 117, 117, 1);
 $green-light-color: rgba(188, 213, 70, 1);
 $green-focus-color: rgba(66, 144, 153, 1);
 $blue-visited-color: rgba(19, 117, 184, 1);
