--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -3,6 +3,7 @@ $white-color: rgba(243, 243, 244, 1);
 $back-color: rgba(233, 233, 233, 1);
 $grey-color: rgba(117, 117, 117, 1);
 $green-light-color: rgba(188, 213, 70, 1);
+$green-active-color: rgba(129, 179, 110, 1);
 $green-focus-color: rgba(66, 144, 153, 1);
 $blue-visited-color: rgba(19, 117, 184, 1);
 body {
